writing man page for getWeather

--- a/docs/getWeather.1
+++ b/docs/getWeather.1
@@ -1,1 +1,21 @@
-.TH get Weather 1 "5 September 2018" "0.1"
+.TH getWeather 1 "5 September 2018" "0.1"
+.SH NAME
+getWeather \- gets metars for airport identifiers from file
+.SH SYNOPSIS
+getWeather
+.SH DESCRIPTION
+.B getWeather
+ gets the weather from the Aviation Weather Center's Text Data Server reading 
+
+the identifiers listed in ./icao_ident
+.SH OPTIONS
+No command line options
+.SH EXIT STATUS
+0 - Success
+
+1 - Failure
+.SH NOTES
+
+.SH BUGS
+
+.SH EXAMPLE
